# Pisces

./: CMakeLists.txt
src/: CMakeLists.txt  README.md
src/gst_app/: CMakeLists.txt  main.c
src/gst_audio/: CMakeLists.txt  main.c
src/gst_factory/: CMakeLists.txt  main.c
src/gst_gtk/: CMakeLists.txt  main.c
src/gst_overlay/: CMakeLists.txt  main.c
src/gst_playbin/: CMakeLists.txt  main.c
src/gst_seek/: main.c
src/gst_tee/: bash.sh  main.c
src/gst_uri/: CMakeLists.txt  main.c
