SET (TARGET_NAME "gst_factory")
AUX_SOURCE_DIRECTORY (. SRC_FILES)
SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/output)
SET (GST_INC /usr/include/gstreamer-0.10/)
SET (GLIB_INC /usr/include/glib-2.0/)
SET (GLIB_CONFIG_INC /usr/lib64/glib-2.0/include/)
SET (XML2_INC /usr/include/libxml2)
SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
INCLUDE_DIRECTORIES (${XML2_INC} ${GST_INC} ${GLIB_INC} ${GLIB_CONFIG_INC})
ADD_EXECUTABLE(${TARGET_NAME} ${SRC_FILES})
TARGET_LINK_LIBRARIES(${TARGET_NAME} -lglib-2.0 -lgobject-2.0 -lgstreamer-1.0 )
INSTALL(TARGETS ${TARGET_NAME} RUNTIME DESTINATION bin) 
