SET (TARGET_NAME "gst_uri")
AUX_SOURCE_DIRECTORY (. SRC_FILES)
SET (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/output)
SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
SET (PLATFORM "x86")
SET (CMAKE_FIND_ROOT_PATH /usr/i686-w64-mingw32/sys-root/)
SET(ENV{PKG_CONFIG_PATH} /usr/i686-w64-mingw32/sys-root/mingw/lib/pkgconfig)
find_package(PkgConfig)
pkg_search_module(GTK gtk+-2.0)
pkg_search_module(GST gstreamer-1.0)
pkg_search_module(GST_PLUGIN_BASE gstreamer-plugins-base-1.0)
pkg_search_module(GLIB glib-2.0)
pkg_search_module(GST_BASE gstreamer-base-1.0)
pkg_search_module(GST_INTERFACE gstreamer-interfaces-1.0)
INCLUDE_DIRECTORIES (${GTK_INCLUDE_DIRS} ${GST_BASE_INCLUDE_DIRS} ${GST_INCLUDE_DIRS} ${GST_PLUGIN_BASE_INCLUDE_DIRS} ${GST_INTERFACE_INCLUDE_DIRS} ${GLIB_INCLUDE_DIRS})
ADD_EXECUTABLE(${TARGET_NAME} ${SRC_FILES})
TARGET_LINK_LIBRARIES(${TARGET_NAME} ${GTK_LIBRARIES} ${GLIB_LIBRARIES} ${GST_INTERFACE_LIBRARIES} ${GST_LIBRARIES} ${GST_BASE_LIBRARIES} ${GST_PLUGIN_BASE_LIBRARIES})
INSTALL(TARGETS ${TARGET_NAME} RUNTIME DESTINATION bin) 
